<resources>
    <string name="app_name">Crunch Time</string>
    <string name="action_settings">Settings</string>

    <string name="edit_calories">Enter calories here.</string>
    <string name="button_calculate">Calculate!</string>

    <string name="title_message">Welcome!</string>
    <string name="calculateBasedOn">Calculate\nbased on</string>
    <string name="repetitionsOf">  repetitions of  </string>
    <string name="minutesOf">  minutes of  </string>

    <string name="exercise1">Pushups</string>
    <string name="exercise2">Jumping Jacks</string>
    <string name="calories">Calories</string>

    <string name="isEquivalentTo">IS EQUIVALENT TO</string>
    <string name="andBothBurn">AND BOTH BURN</string>

    <string-array name="exercises_array">
        <item>Pushups</item>
        <item>Situps</item>
        <item>Jumping Jacks</item>
        <item>Jogging</item>
        <item>Squats</item>
        <item>Leg-lifts</item>
        <item>Planks</item>
        <item>Pullups</item>
        <item>Cycling</item>
        <item>Walking</item>
        <item>Swimming</item>
        <item>Stair-climbing</item>
    </string-array>

</resources>
