<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">


<LinearLayout android:id="@+id/layout_title_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/title_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textSize="20sp"
            android:text="@string/title_message" />

    </LinearLayout>

    <LinearLayout android:id="@+id/layout_main_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout android:id="@+id/layout_input_fields"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView android:id="@+id/blank_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="\n" />

            <LinearLayout android:id="@+id/layout_exercise1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText android:id="@+id/edit_repsmins1"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:onClick="editTextExer1_clicked"
                    android:maxLength="4"
                    android:hint="000" />
                <TextView android:id="@+id/layout_repsmins1"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repetitionsOf"/>
                <Spinner android:id="@+id/spinner_exercise1"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>

            <TextView android:id="@+id/isEquivalentTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/isEquivalentTo" />

            <LinearLayout android:id="@+id/layout_exercise2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText android:id="@+id/edit_repsmins2"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:onClick="editTextExer2_clicked"
                    android:maxLength="4"
                    android:hint="000" />
                <TextView android:id="@+id/layout_repsmins2"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minutesOf"/>
                <Spinner android:id="@+id/spinner_exercise2"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>

            <TextView android:id="@+id/andBothBurn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/andBothBurn"/>

            <LinearLayout android:id="@+id/layout_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText android:id="@+id/edit_calories"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:onClick="editTextCalor_clicked"
                    android:maxLength="5"
                    android:hint="000" />
                <TextView android:id="@+id/calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calories"/>
            </LinearLayout>


        </LinearLayout>

        <RadioGroup android:id="@+id/radioGroup_chooseConstant"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left">

            <TextView android:id="@+id/calculatebasedOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculateBasedOn" />

            <RadioButton android:id="@+id/radio_exercise1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exercise1"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_exercise2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exercise2"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calories"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

    </LinearLayout>

    <Button android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_calculate"
        android:onClick="calculateAll"/>


</LinearLayout>
